# cmsis-pack-manager

./: pyproject.toml
rust/cmsis-cffi/: Cargo.toml
rust/cmsis-cli/: Cargo.toml
rust/cmsis-cli/src/: main.rs
rust/cmsis-pack/: Cargo.toml
rust/cmsis-pack/src/pdsc/: device.rs
rust/cmsis-pack/src/update/: download.rs  mod.rs
rust/cmsis-pack/src/utils/: parse.rs
