[package]
authors = ["Jimmy Brisson <theotherjimmy@gmail.com>",
           "Chris Reed <chris.reed@arm.com>",
           "Mathias Brossard <mathias.brossard@arm.com>"]
name = "cmsis-pack"
repository = "https://github.com/ARMmbed/cmsis-pack-manager"
version = "0.2.0"
edition = "2018"
description = "Rust crate for managing CMSIS PACKs"
license = "Apache-2.0"
categories = ["embedded", "hardware-support", "development-tools::debugging"]
keywords = ["embedded", "cmsis"]

[dependencies]
bytes = "0.5.5"
failure = "0.1.1"
futures = "0.3.5"
log = "0.4.8"
minidom = "^0.12.0"
quick-xml = "0.17.2"
reqwest = { version = "0.10.4", default_features = false, features = ["rustls-tls", "stream"] }
rustc-demangle = "0.1.16"
serde = { version = "^1.0.114", features = ["derive"] }
serde_derive = "^1.0.114"
serde_json = "1.0"
tokio = { version = "0.2.21", features = ["macros", "rt-threaded", "stream"] }

[dev-dependencies]
time = "0.2.16"

[features]
default = []
